<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="2dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="2dp"
    tools:context=".MenuActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <Button 
            android:id="@+id/graf1" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico1"
            android:onClick="showGraf1"/>
       <Button 
            android:id="@+id/graf2" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico2"
            android:onClick="showGraf2"/>
       <Button 
            android:id="@+id/graf3" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico3"
            android:onClick="showGraf3"/>
       <Button 
            android:id="@+id/graf4" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico4"
            android:onClick="showGraf4"/>
       <Button 
            android:id="@+id/graf5" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico5"
            android:onClick="showGraf5"/>
       <Button 
            android:id="@+id/graf6" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico6"
            android:onClick="showGraf6"/>
       <Button 
            android:id="@+id/graf7" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico7"
            android:onClick="showGraf7"/>
       <Button 
            android:id="@+id/graf8" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico8"
            android:onClick="showGraf8"/>
       <Button 
            android:id="@+id/graf9" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico9"
            android:onClick="showGraf9"/>
       <Button 
            android:id="@+id/graf10" 
            style="@style/mybutton_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:text="@string/boton_grafico10"
            android:onClick="showGraf10"/>
           
    </LinearLayout>
    
</ScrollView>
