  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/background_menu"     
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" 
     android:orientation="vertical"
     android:screenOrientation="portrait" >
	    
	     <TextView
	             android:id="@+id/localidad"
	             style="@style/background_datos"
	             android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:gravity="top"
	             android:text="@string/locality_name" />
	    <fragment
	    	android:id="@+id/mapa"
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="0.25"    	
	    	class="com.google.android.gms.maps.MapFragment"
	    	android:apiKey="AIzaSyBXkm_hbJhRQ80m-3WVwTzJw3nNtO4aE4g" />
	     <!-- Divisor de mapa y contenido -->
	   
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:background="#a9a46f"		    
		    >

			<Button
			    android:id="@+id/showMenu"
			    style="@style/btnStyleArsenic1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/global"
			    android:onClick="showMenu" />
		      
		      <Button
			    android:id="@+id/showMenuMunicipio"
			    style="@style/btnStyleArsenic2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/municipio"
			    android:onClick="showMenuMunicipio" />
	      
	     <!-- Contenido -->
		</LinearLayout>
	      
	    
</LinearLayout>
